// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gallery DOM Structure renders correctly 1`] = `
<div
  className="widget-gallery widget-gallery-lg-4 widget-gallery-md-3 widget-gallery-sm-2"
>
  <div
    className="widget-gallery-item"
    key="item_0"
  >
    11
  </div>
  <div
    className="widget-gallery-item"
    key="item_1"
  >
    22
  </div>
  <div
    className="widget-gallery-item"
    key="item_2"
  >
    33
  </div>
</div>
`;

exports[`Gallery DOM Structure renders correctly with onclick event 1`] = `
<div
  className="widget-gallery widget-gallery-lg-4 widget-gallery-md-3 widget-gallery-sm-2"
>
  <div
    className="widget-gallery-item widget-gallery-clickable"
    key="item_0"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    11
  </div>
  <div
    className="widget-gallery-item widget-gallery-clickable"
    key="item_1"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    22
  </div>
  <div
    className="widget-gallery-item widget-gallery-clickable"
    key="item_2"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    33
  </div>
</div>
`;
